src/snapshots/lasr__tui__tests__empty.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                                                                "
" ┌Search────────┐         ┌Replace───────┐                                      "
" │              │ < tab > │              │                                      "
" └──────────────┘         └──────────────┘                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
