src/snapshots/lasr__tui__tests__replace.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                        "
" ┌Search─────┐         ┌Replace───────┐ "
" │line       │ < TAB > │replacement   │ "
" └───────────┘         └──────────────┘ "
" ┌file1.txt───────────────────────────┐ "
" │1      This is linereplacement one. │ "
" │2      This is linereplacement two. │ "
" │3      This is linereplacement three│ "
" └────────────────────────────────────┘ "
" ┌dir1/file2.txt──────────────────────┐ "
" │1      The first linereplacement.   │ "
" │2      The second linereplacement.  │ "
" │3      The third linereplacement.   │ "
" └────────────────────────────────────┘ "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
