src/snapshots/lasr__tui__tests__replace_ast.snap
---
source: src/tui.rs
expression: "scrub_tmp(&tmp, terminal.backend())"
---
"                                        "
" ┌Search────┐         ┌Replace────────┐ "
" │$FN($$$ARG│ < tab > │$FN($$$ARGS, 5)│ "
" └──────────┘         └───────────────┘ "
" ┌<TMP>/main.py─────────────┐ "
" │1      print(x + y, 5)              │ "
" │4      thing(3, 5, 5)               │ "
" └────────────────────────────────────┘ "
" ┌<TMP>/main.rs─────────────┐ "
" │5      thing(3, 5, 5)               │ "
" └────────────────────────────────────┘ "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
