src/snapshots/lasr__tui__tests__replace_capture.snap
---
source: src/tui.rs
expression: "scrub_tmp(&tmp, terminal.backend())"
---
"                                        "
" ┌Search─────┐         ┌Replace───────┐ "
" │This is    │ < tab > │${0}n't       │ "
" └───────────┘         └──────────────┘ "
" ┌<TMP>/file1.txt───────────┐ "
" │1      This isn't line one.         │ "
" │2      This isn't line two.         │ "
" │3      This isn't line three.       │ "
" └────────────────────────────────────┘ "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
