src/snapshots/lasr__tui__tests__search.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                        "
" ┌Search─────┐         ┌Replace───────┐ "
" │line       │ < tab > │              │ "
" └───────────┘         └──────────────┘ "
" ┌testdata/dir1/file2.txt─────────────┐ "
" │1      The first line.              │ "
" │2      The second line.             │ "
" │3      The third line.              │ "
" └────────────────────────────────────┘ "
" ┌testdata/file1.txt──────────────────┐ "
" │1      This is line one.            │ "
" │2      This is line two.            │ "
" │3      This is line three.          │ "
" └────────────────────────────────────┘ "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
