src/snapshots/lasr__tui__tests__search_ast.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                        "
" ┌Search─────┐         ┌Replace───────┐ "
" │$FN($$$ARGS│ < tab > │              │ "
" └───────────┘         └──────────────┘ "
" ┌testdata/main.py────────────────────┐ "
" │1      print(x + y)                 │ "
" │4      thing(3, 5)                  │ "
" └────────────────────────────────────┘ "
" ┌testdata/main.rs────────────────────┐ "
" │5      thing(3, 5)                  │ "
" └────────────────────────────────────┘ "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
