src/snapshots/lasr__tui__tests__search_multiline.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                        "
" ┌Search (m)─┐         ┌Replace───────┐ "
" │\w+\n\w+   │ < tab > │One           │ "
" └───────────┘         └──────────────┘ "
" ┌testdata/aaa/aaa1.txt───────────────┐ "
" │1      One                          │ "
" │       One                          │ "
" │       One                          │ "
" │                                    │ "
" │                                    │ "
" │                                    │ "
" └────────────────────────────────────┘ "
" ┌testdata/aaa/aaa2.txt───────────────┐ "
" │1      One                          │ "
" │       One                          │ "
" │       One                          │ "
" │       One                          │ "
" │                                    │ "
" └────────────────────────────────────┘ "
"                                        "
