src/snapshots/lasr__tui__tests__search_results_full.snap
---
source: src/tui.rs
expression: terminal.backend()
---
"                                        "
" ┌Search─────┐         ┌Replace───────┐ "
" │line       │ < tab > │              │ "
" └───────────┘         └──────────────┘ "
" ┌file1.txt───────────────────────────┐ "
" │1      This is line one.            │ "
" │2      This is line two.            │ "
" └────────────────────────────────────┘ "
" ┌dir1/file2.txt──────────────────────┐ "
" │1      The first line.              │ "
" └────────────────────────────────────┘ "
"                                        "
